crates/formatter/tests/snapshots/snapshots__migrations__000325_dynamic_parameters_metadata.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_terraform_values drop column provisionerd_version;
