crates/formatter/tests/snapshots/snapshots__migrations__000325_dynamic_parameters_metadata.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_terraform_values add column if not exists provisionerd_version text not null default '';

comment on column template_version_terraform_values.provisionerd_version is 'What version of the provisioning engine was used to generate the cached plan and module files.';
