crates/formatter/tests/snapshots/snapshots__migrations__000327_version_dynamic_parameter_flow.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Default to `false`. Users will have to manually opt back into the classic parameter flow.
-- We want the new experience to be tried first.
alter table templates
	add column use_classic_parameter_flow BOOL not null default false;

comment on column templates.use_classic_parameter_flow is 'Determines whether to default to the dynamic parameter creation flow for this template ' 'or continue using the legacy classic parameter creation flow.' 'This is a template wide setting, the template admin can revert to the classic flow if there are any issues. ' 'An escape hatch is required, as workspace creation is a core workflow and cannot break. ' 'This column will be removed when the dynamic parameter creation flow is stable.';

-- Update the template_with_names view by recreating it.
drop view template_with_names;
create view template_with_names as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username,
	coalesce(organizations.name, '') as organization_name,
	coalesce(organizations.display_name, '') as organization_display_name,
	coalesce(organizations.icon, '') as organization_icon
from templates
	left join visible_users on templates.created_by = visible_users.id
	left join organizations on templates.organization_id = organizations.id;

comment on view template_with_names is 'Joins in the display name information such as username, avatar, and organization name.';
