crates/formatter/tests/snapshots/snapshots__migrations__000328_prebuild_failure_limit_notification.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '414d9331-c1fc-4761-b40c-d1f4702279eb';
