crates/formatter/tests/snapshots/snapshots__migrations__000329_add_status_to_template_presets.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Remove the column from the table first (must happen before dropping the enum type)
alter table template_version_presets drop column prebuild_status;

-- Then drop the enum type
drop type prebuild_status;
