crates/formatter/tests/snapshots/snapshots__migrations__000329_add_status_to_template_presets.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type prebuild_status as enum (
	'healthy', -- Prebuilds are working as expected; this is the default, healthy state.
	'hard_limited', -- Prebuilds have failed repeatedly and hit the configured hard failure limit; won't be retried anymore.
	'validation_failed' -- Prebuilds failed due to a non-retryable validation error (e.g. template misconfiguration); won't be retried.
);

alter table template_version_presets add column prebuild_status prebuild_status not null default 'healthy'::prebuild_status;
