crates/formatter/tests/snapshots/snapshots__migrations__000330_workspace_with_correct_owner_names.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view template_version_with_user;

drop view workspace_build_with_user;

drop view template_with_names;

drop view workspaces_expanded;

drop view visible_users;

-- Adds users.name
create view visible_users as
select users.id, users.username, users.name, users.avatar_url
from users;

comment on view visible_users is 'Visible fields of users are allowed to be joined with other tables for including context of other resources.';

-- Recreate `workspace_build_with_user` as described in dump.sql
create view workspace_build_with_user as
select
	workspace_builds.id,
	workspace_builds.created_at,
	workspace_builds.updated_at,
	workspace_builds.workspace_id,
	workspace_builds.template_version_id,
	workspace_builds.build_number,
	workspace_builds.transition,
	workspace_builds.initiator_id,
	workspace_builds.provisioner_state,
	workspace_builds.job_id,
	workspace_builds.deadline,
	workspace_builds.reason,
	workspace_builds.daily_cost,
	workspace_builds.max_deadline,
	workspace_builds.template_version_preset_id,
	coalesce(visible_users.avatar_url, ''::text) as initiator_by_avatar_url,
	coalesce(visible_users.username, ''::text) as initiator_by_username,
	coalesce(visible_users.name, ''::text) as initiator_by_name
from (
	workspace_builds
		left join visible_users on (
			(workspace_builds.initiator_id = visible_users.id)
		)
);

comment on view workspace_build_with_user is 'Joins in the username + avatar url of the initiated by user.';

-- Recreate `template_with_names` as described in dump.sql
create view template_with_names as
select
	templates.id,
	templates.created_at,
	templates.updated_at,
	templates.organization_id,
	templates.deleted,
	templates.name,
	templates.provisioner,
	templates.active_version_id,
	templates.description,
	templates.default_ttl,
	templates.created_by,
	templates.icon,
	templates.user_acl,
	templates.group_acl,
	templates.display_name,
	templates.allow_user_cancel_workspace_jobs,
	templates.allow_user_autostart,
	templates.allow_user_autostop,
	templates.failure_ttl,
	templates.time_til_dormant,
	templates.time_til_dormant_autodelete,
	templates.autostop_requirement_days_of_week,
	templates.autostop_requirement_weeks,
	templates.autostart_block_days_of_week,
	templates.require_active_version,
	templates.deprecated,
	templates.activity_bump,
	templates.max_port_sharing_level,
	templates.use_classic_parameter_flow,
	coalesce(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	coalesce(visible_users.username, ''::text) as created_by_username,
	coalesce(visible_users.name, ''::text) as created_by_name,
	coalesce(organizations.name, ''::text) as organization_name,
	coalesce(organizations.display_name, ''::text) as organization_display_name,
	coalesce(organizations.icon, ''::text) as organization_icon
from (
	(
		templates
			left join visible_users on ((templates.created_by = visible_users.id))
	)
		left join organizations on ((templates.organization_id = organizations.id))
);

comment on view template_with_names is 'Joins in the display name information such as username, avatar, and organization name.';

-- Recreate `template_version_with_user` as described in dump.sql
create view template_version_with_user as
select
	template_versions.id,
	template_versions.template_id,
	template_versions.organization_id,
	template_versions.created_at,
	template_versions.updated_at,
	template_versions.name,
	template_versions.readme,
	template_versions.job_id,
	template_versions.created_by,
	template_versions.external_auth_providers,
	template_versions.message,
	template_versions.archived,
	template_versions.source_example_id,
	coalesce(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	coalesce(visible_users.username, ''::text) as created_by_username,
	coalesce(visible_users.name, ''::text) as created_by_name
from (
	template_versions
		left join visible_users on (template_versions.created_by = visible_users.id)
);

comment on view template_version_with_user is 'Joins in the username + avatar url of the created by user.';

-- Recreate `workspaces_expanded` as described in dump.sql
create view workspaces_expanded as
select
	workspaces.id,
	workspaces.created_at,
	workspaces.updated_at,
	workspaces.owner_id,
	workspaces.organization_id,
	workspaces.template_id,
	workspaces.deleted,
	workspaces.name,
	workspaces.autostart_schedule,
	workspaces.ttl,
	workspaces.last_used_at,
	workspaces.dormant_at,
	workspaces.deleting_at,
	workspaces.automatic_updates,
	workspaces.favorite,
	workspaces.next_start_at,
	visible_users.avatar_url as owner_avatar_url,
	visible_users.username as owner_username,
	visible_users.name as owner_name,
	organizations.name as organization_name,
	organizations.display_name as organization_display_name,
	organizations.icon as organization_icon,
	organizations.description as organization_description,
	templates.name as template_name,
	templates.display_name as template_display_name,
	templates.icon as template_icon,
	templates.description as template_description
from (
	(
		(
			workspaces
				join visible_users on ((workspaces.owner_id = visible_users.id))
		)
			join organizations on ((workspaces.organization_id = organizations.id))
	)
		join templates on ((workspaces.template_id = templates.id))
);

comment on view workspaces_expanded is 'Joins in the display name information such as username, avatar, and organization name.';
