crates/formatter/tests/snapshots/snapshots__migrations__000331_app_group.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_apps drop column display_group;
